# padawan

./: README.md  main.py  pyproject.toml  requirements.txt
1_linux_/: README.md
2_git_/: README.md
3_steam_skins/: README.md
steam_skins/: README.md
task_advanced/task1/: README.md  computer_science.txt  solution.py
tasks_week_1_2/task1/: padawan_sol.py  task_1.md  task_1_solution.py
tasks_week_1_2/task2/: padawan_sol.py  padawan_sol_v2.py  padawan_sol_v3.py  task_2.md  task_2_solution.py  test.py
tasks_week_1_2/task3/: task_3.md  task_3_solution.py
tasks_week_1_2/task4/: find_sex.py  task4.md
tasks_week_1_2/task5/: task_5.md  task_5_solution.py
tasks_week_1_2/task6/: task_6.py
